--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
         "bootstrap": null,
         "jquery": null,
         "requirejs": null,
-	"firebase": null
+        "core_js": null,
+	    "firebase": null
     }
 }
